test/extended/util/compat_otp/testdata/networking/egressfirewall/egressfirewall-specific-dnsname.yaml
kind: EgressFirewall
apiVersion: k8s.ovn.org/v1
metadata:
  name: default
spec:
  egress:
  - type: Allow
    to:
      dnsName: registry-1.docker.io
  - type: Allow
    to:
      dnsName: www.facebook.com
    ports:
      - protocol: TCP
        port: 80
  - type: Deny
    to:
      cidrSelector: 0.0.0.0/0
